pypi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pypiserver-service
  labels:
    app: pypiserver
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: pypiserver
  type: ClusterIP
